# glRays

./: CMakeLists.txt  README.md
glRays/: CMakeLists.txt  camera.h  compute.glsl  fragment.glsl  glRays.cpp  gl_texture.h  options.h  scene.h  shader.cpp  shader.h  vertex.glsl
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h
